--- a/3/cookie-app/public/index.html
+++ b/3/cookie-app/public/index.html
@@ -8,6 +8,116 @@
 <body>
   <h1>Cookie App</h1>
   <p>Welcome to Cookie App.</p>
+
+  <button onclick="getUsers()">Get Users</button>
+  <button onclick="getUser()">Get User</button>
+  <button onclick="createUser()">Create User</button>
+  <button onclick="updateUser()">Update User</button>
+  <button onclick="deleteUser()">Delete User</button>
+  <br><br>
+  <button onclick="setCookie()">Set Cookie</button>
+  <button onclick="getCookie()">Get Cookie</button>
+  <br><br>
+  <button onclick="middleware()">Try Middleware</button>
+  <br><br>
+  <button onclick="setSessionCookie()">Set Session Cookie</button>
+  <button onclick="getSessionCookie()">Get Session Cookie</button>
+  <br><br>
+  <button onclick="login()">Login</button>
+  <button onclick="logout()">Logout</button>
+  <button onclick="protected()">Protected</button>
+  <br><br>
+
+
+  <script>
+    async function getUsers() {
+      const response = await fetch('/users');
+      const data = await response.json();
+      alert(JSON.stringify(data));
+    }
+    async function getUser() {
+      const response = await fetch('/users/mikkel');
+      const data = await response.json();
+      alert(JSON.stringify(data));
+    }
+    async function createUser() {
+      const response = await fetch('/users', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify({ username: 'newuser', name: 'New User' })
+      });
+      const data = await response.json();
+      alert(JSON.stringify(data));
+    }
+    async function updateUser() {
+      const response = await fetch('/users/mikkel', {
+        method: 'PUT',
+        headers: {
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify({ name: 'Updated Mikkel' })
+      });
+      const data = await response.json();
+      alert(JSON.stringify(data));
+    }
+    async function deleteUser() {
+      const response = await fetch('/users/newuser', {
+        method: 'DELETE'
+      });
+      const data = await response.json();   
+      alert(JSON.stringify(data));
+    }
+    async function setCookie() {
+      const response = await fetch('/cookie/set');
+      const data = await response.json();
+      alert(data.message);
+    }
+    async function getCookie() {
+      const response = await fetch('/cookie/get');
+      const data = await response.json();
+      alert(data.message);
+    }
+    async function middleware() {
+      const response = await fetch('/middleware');
+      const data = await response.json();
+      alert(JSON.stringify(data));
+    }
+    async function setSessionCookie() {
+      const response = await fetch('/cookie/set-session');
+      const data = await response.json();
+      alert(data.message);
+    }
+    async function getSessionCookie() {
+      const response = await fetch('/cookie/get-session');
+      const data = await response.json();
+      alert(data.message);
+    }
+    async function login() {
+      const response = await fetch('/auth/login', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify({ username: 'mikkel' })
+      });
+      const data = await response.json();
+      alert(JSON.stringify(data));
+    }
+    async function logout() {
+      const response = await fetch('/auth/logout', {
+        method: 'POST'
+      });
+      const data = await response.json();
+      alert(JSON.stringify(data));
+    }
+    async function protected() {
+      const response = await fetch('/auth/protected');
+      const data = await response.json();
+      alert(JSON.stringify(data));
+    }
+  </script>
 </body>
 
 </html>
