--- a/3/cookie-app/public/index.html
+++ b/3/cookie-app/public/index.html
@@ -17,11 +17,9 @@
   <br><br>
   <button onclick="setCookie()">Set Cookie</button>
   <button onclick="getCookie()">Get Cookie</button>
-  <br><br>
-  <button onclick="middleware()">Try Middleware</button>
-  <br><br>
   <button onclick="setSessionCookie()">Set Session Cookie</button>
   <button onclick="getSessionCookie()">Get Session Cookie</button>
+  <button onclick="middleware()">Middleware</button>
   <br><br>
   <button onclick="login()">Login</button>
   <button onclick="logout()">Logout</button>
@@ -30,70 +28,81 @@
 
 
   <script>
+
     async function getUsers() {
-      const response = await fetch('/users');
+      const response = await fetch('/user');
       const data = await response.json();
       alert(JSON.stringify(data));
     }
+
     async function getUser() {
-      const response = await fetch('/users/mikkel');
+      const response = await fetch('/user/mikkel');
       const data = await response.json();
       alert(JSON.stringify(data));
     }
+
     async function createUser() {
-      const response = await fetch('/users', {
+      const response = await fetch('/user/create', {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json'
         },
-        body: JSON.stringify({ username: 'newuser', name: 'New User' })
+        body: JSON.stringify({ username: 'Hildur', password: 'hildudigi', email: 'hil.digi@cbs.dk' })
       });
       const data = await response.json();
       alert(JSON.stringify(data));
     }
+
     async function updateUser() {
-      const response = await fetch('/users/mikkel', {
+      const response = await fetch('/user/update/Hildur', {
         method: 'PUT',
         headers: {
           'Content-Type': 'application/json'
         },
-        body: JSON.stringify({ name: 'Updated Mikkel' })
+        body: JSON.stringify({ password: 'hildudigidoo' })
       });
       const data = await response.json();
       alert(JSON.stringify(data));
     }
+
     async function deleteUser() {
-      const response = await fetch('/users/newuser', {
+      const response = await fetch('/user/delete/Hildur', {
         method: 'DELETE'
       });
-      const data = await response.json();   
-      alert(JSON.stringify(data));
+      const data = await response.json();
+      alert(data.message);
     }
+
     async function setCookie() {
       const response = await fetch('/cookie/set');
       const data = await response.json();
       alert(data.message);
     }
+
     async function getCookie() {
       const response = await fetch('/cookie/get');
       const data = await response.json();
       alert(data.message);
     }
+
     async function middleware() {
       const response = await fetch('/middleware');
       const data = await response.json();
       alert(JSON.stringify(data));
     }
+
     async function setSessionCookie() {
       const response = await fetch('/cookie/set-session');
       const data = await response.json();
       alert(data.message);
     }
+
     async function getSessionCookie() {
       const response = await fetch('/cookie/get-session');
       const data = await response.json();
       alert(data.message);
     }
+
     async function login() {
       const response = await fetch('/auth/login', {
         method: 'POST',
@@ -105,6 +114,7 @@
       const data = await response.json();
       alert(JSON.stringify(data));
     }
+
     async function logout() {
       const response = await fetch('/auth/logout', {
         method: 'POST'
@@ -112,6 +122,7 @@
       const data = await response.json();
       alert(JSON.stringify(data));
     }
+
     async function protected() {
       const response = await fetch('/auth/protected');
       const data = await response.json();
