--- a/3/cookie-app/public/index.html
+++ b/3/cookie-app/public/index.html
@@ -17,9 +17,9 @@
   <br><br>
   <button onclick="setCookie()">Set Cookie</button>
   <button onclick="getCookie()">Get Cookie</button>
+  <button onclick="middleware()">Cookie Middleware</button>
   <button onclick="setSessionCookie()">Set Session Cookie</button>
   <button onclick="getSessionCookie()">Get Session Cookie</button>
-  <button onclick="middleware()">Middleware</button>
   <br><br>
   <button onclick="login()">Login</button>
   <button onclick="logout()">Logout</button>
