--- a/9/2-twilio-server/public/index.html
+++ b/9/2-twilio-server/public/index.html
@@ -38,7 +38,7 @@
         <td>Webhook til håndtering af opkald.</td>
       </tr>
       <tr>
-        <td><code>/twilio/whatsapp</code></td>
+        <td><code>/twilio/whatsapp/webhook</code></td>
         <td><code>POST</code></td>
         <td>Webhook til håndtering af WhatsApp beskeder. Skriv "køb" eller "slut" for at interagere.</td>
       </tr>
